# ninetails

./: .gitignore  BUILD.bazel  WORKSPACE  bazel-bin  bazel-ninetails  bazel-out  bazel-testlogs  deps.bzl  docker-compose.yaml  go.mod  go.sum
.devcontainer/: devcontainer.json
.dvc/: config
cmd/: BUILD.bazel
cmd/consumer/: BUILD.bazel  main.go
cmd/producer/: BUILD.bazel  main.go
data/: BUILD.bazel  cifar-10.dvc
docker/: triton.Dockerfile
go/cmd/consumer/: BUILD.bazel  main.go
go/cmd/producer/: BUILD.bazel  main.go
go/internal/task/: BUILD.bazel  infer.go
go/internal/utils/: BUILD.bazel  conv.go
internal/task/: BUILD.bazel  infer.go  sum.go
internal/utils/: BUILD.bazel
model_repository/cifar/: 1.dvc  config.pbtxt
model_repository/cifar_dali_preprocess/: config.pbtxt
model_repository/cifar_dali_preprocess/1/: dali.py
model_repository/cifar_ensemble/: config.pbtxt
model_repository/cifar_preprocess/: config.pbtxt
model_repository/cifar_preprocess/1/: model.py
proto/triton/client/: BUILD.bazel  grpc_service.proto  model_config.proto
proto/triton/health/: BUILD.bazel  health.proto
python/: requirements.txt  stats.md
python/.devcontainer/: Dockerfile
python/perf_bench/: dataset.py  stats.md  tf_perf.py  triton_ensemble_perf.py  triton_perf.py
python/train/: cifar.py
tools/: gazelle.sh  gazelle_update_repos.sh
tools/plumber/: sum_job_input.sh
tools/triton/: start_sdk.sh  start_trt.sh
tools/triton/convert/: tf_cifar.sh
tools/triton/model_analyzer/: profile.sh  report.sh
tools/triton/trt/: onnx2trt.sh
