load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "consumer_lib",
    srcs = ["main.go"],
    importpath = "github.com/m-nny/ninetails/cmd/consumer",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/task",
        "@com_github_hibiken_asynq//:asynq",
    ],
)

go_binary(
    name = "consumer",
    embed = [":consumer_lib"],
    visibility = ["//visibility:public"],
)
