load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "consumer_lib",
    srcs = ["main.go"],
    importpath = "github.com/m-nny/ninetails/cmd/consumer",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/task",
        "//proto/triton/client",
        "@com_github_hibiken_asynq//:asynq",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "consumer",
    embed = [":consumer_lib"],
    visibility = ["//visibility:public"],
)
