load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "producer_lib",
    srcs = ["main.go"],
    importpath = "github.com/m-nny/ninetails/cmd/producer",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/task",
        "@com_github_hibiken_asynq//:asynq",
    ],
)

go_binary(
    name = "producer",
    data = ["//data:cifar10_train"],
    embed = [":producer_lib"],
    visibility = ["//visibility:public"],
)
