load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "task",
    srcs = [
        "infer.go",
        "sum.go",
    ],
    importpath = "github.com/m-nny/ninetails/go/internal/task",
    visibility = ["//:__subpackages__"],
    deps = [
        "//go/internal/utils",
        "//proto/triton/client",
        "@com_github_hibiken_asynq//:asynq",
        "@org_golang_x_exp//slices",
    ],
)
