load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "client_proto",
    srcs = ["health.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "client_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "./grpc-client",
    proto = ":client_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "grpc-client",
    embed = [":client_go_proto"],
    importpath = "./grpc-client",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "health_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/m-nny/ninetails/proto/triton/health",
    proto = ":client_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "health",
    embed = [":health_go_proto"],
    importpath = "github.com/m-nny/ninetails/proto/triton/health",
    visibility = ["//visibility:public"],
)
